# lj-archiver

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: application.c  main.c
archive/: archive.c
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
config/: config.c
html/: html.c
http/: http.c
include/: application.h  lj_archive.h  lj_config.h  lj_html.h  lj_http.h  lj_logger.h  lj_parser.h  lj_storage.h
logger/: logger.c
parser/: parser.c
scripts/: new-module.ps1
storage/: storage.c
tests/: CMakeLists.txt  test_basic.c
util/: util.c  util.h
